[gd_scene load_steps=11 format=3 uid="uid://ch8on8pvvbr56"]

[ext_resource type="Script" path="res://Scripts/Classes/captain.gd" id="1_0cpxp"]
[ext_resource type="Texture2D" uid="uid://u6febikgtx8w" path="res://Assets/My Sprites/low captain.png" id="1_xiq11"]
[ext_resource type="Script" path="res://Scripts/Components/AttackRange.gd" id="2_2fn7q"]
[ext_resource type="Texture2D" uid="uid://c3njkg8ht8e7h" path="res://Assets/Test Animation Sprites/Tiny Swords (Update 010)/Factions/Knights/Troops/Warrior/Yellow/Warrior_Yellow.png" id="3_djkrb"]

[sub_resource type="Animation" id="Animation_d2odb"]
resource_name = "Walking"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_gco2i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_dpllf"]
resource_name = "Attack"
length = 1.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 22]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w4p0a"]
_data = {
"Attack": SubResource("Animation_dpllf"),
"RESET": SubResource("Animation_gco2i"),
"Walking": SubResource("Animation_d2odb")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gjr65"]
radius = 17.5
height = 35.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1rety"]
radius = 40.0
height = 110.0

[node name="Captain" type="CharacterBody2D" groups=["Support"]]
collision_layer = 2
collision_mask = 13
script = ExtResource("1_0cpxp")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.223529, 0.223529, 0.223529, 1)
texture = ExtResource("1_xiq11")

[node name="SpriteTest" type="Sprite2D" parent="."]
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_djkrb")
hframes = 6
vframes = 8
frame = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../SpriteTest")
libraries = {
"": SubResource("AnimationLibrary_w4p0a")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 13)
shape = SubResource("CapsuleShape2D_gjr65")

[node name="AttackRange" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 12
script = ExtResource("2_2fn7q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
position = Vector2(-1, 8)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_1rety")

[node name="AttackTimer" type="Timer" parent="AttackRange"]
one_shot = true

[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_attack_range_body_exited"]
[connection signal="timeout" from="AttackRange/AttackTimer" to="." method="_on_timer_timeout"]
